--- a/templateSources/WpfApplication/Company.Desktop.Application/NLog.config
+++ b/templateSources/WpfApplication/Company.Desktop.Application/NLog.config
@@ -4,7 +4,7 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+      internalLogLevel="Warn" internalLogFile="c:\temp\nlog-internal.log">
 
 	<!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
@@ -22,11 +22,13 @@
 		<target xsi:type="Debugger" name="console" layout="${timestamp} ${uppercase:${level}} ${message}"/>
 		<target xsi:type="File" name="fileWithLevel" createDirs="true" autoFlush="true" enableFileDelete="true" encoding="utf-8" fileName="${logDirectory}/${level}.txt" layout="${timestamp} ${message}"/>
 		<target xsi:type="File" name="mergeFile" createDirs="true" autoFlush="true" enableFileDelete="true" encoding="utf-8" fileName="${logDirectory}/all.txt" layout="${timestamp} ${uppercase:${level}} ${message}"/>
+		<target xsi:type="Notification" name="notification" position="BottomRight" layout="${date:HH\:mm\:ss} ${message}"/>
 	</targets>
 
 	<rules>
 		<logger name="ServiceCore" minlevel="Warn" writeTo="el"/>
 		<logger name="ServiceCore" minlevel="Trace" writeTo="mergeFile,fileWithLevel,console" final="true" />
+		<logger name="*" minlevel="Error" writeTo="notification" />
 		<logger name="*" minlevel="Warn" writeTo="el" />
 		<logger name="*" minlevel="Trace" writeTo="mergeFile,fileWithLevel,console" />
 	</rules>
