--- a/src/Tooling/Tooling.csproj
+++ b/src/Tooling/Tooling.csproj
@@ -46,20 +46,23 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Features\ProjectMover\MoverTool.cs" />
-    <Compile Include="Models\ProjectMoverViewModel.cs" />
-    <Compile Include="Models\ViewModelBase.cs" />
+    <Compile Include="Features\ProjectMover\ViewModels\ProjectMoverItemViewModel.cs" />
+    <Compile Include="Features\ProjectMover\ViewModels\ProjectMoverViewModel.cs" />
+    <Compile Include="Shared\ViewModelBase.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToolingPackage.cs" />
     <Compile Include="Utility\EventDelegator.cs" />
     <Compile Include="Utility\LoggerHelper.cs" />
+    <Compile Include="Utility\PackageHelper.cs" />
     <Compile Include="Utility\RelayCommand.cs" />
     <Compile Include="Utility\SolutionHelper.cs" />
-    <Compile Include="Views\ProjectMoverToolWindow.cs" />
-    <Compile Include="Views\ProjectMoverCommand.cs" />
-    <Compile Include="Views\ProjectMoverControl.xaml.cs">
+    <Compile Include="Features\ProjectMover\Views\ProjectMoverToolWindow.cs" />
+    <Compile Include="Features\ProjectMover\Commands\ProjectMoverCommand.cs" />
+    <Compile Include="Features\ProjectMover\Views\ProjectMoverControl.xaml.cs">
       <DependentUpon>ProjectMoverControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Utility\Theme.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -93,10 +96,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="Views\Resources\OpenProjectMoverCommandCommand.png" />
+    <Content Include="Features\ProjectMover\Resources\OpenProjectMoverCommandCommand.png" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\ProjectMoverControl.xaml">
+    <Page Include="Features\ProjectMover\Views\ProjectMoverControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
