--- a/src/Tooling/Tooling.csproj
+++ b/src/Tooling/Tooling.csproj
@@ -48,6 +48,11 @@
     <Compile Include="Features\ProjectMover\MoverTool.cs" />
     <Compile Include="Features\ProjectMover\ViewModels\ProjectMoverItemViewModel.cs" />
     <Compile Include="Features\ProjectMover\ViewModels\ProjectMoverViewModel.cs" />
+    <Compile Include="Shared\Resources\Translations.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Translations.resx</DependentUpon>
+    </Compile>
     <Compile Include="Shared\ViewModelBase.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -101,7 +106,13 @@
       <LastGenOutput>ToolingPackageCommands.cs</LastGenOutput>
     </VSCTCompile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Shared\Resources\Translations.de.resx" />
+    <EmbeddedResource Include="Shared\Resources\Translations.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Translations.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Features\ProjectMover\Resources\OpenProjectMoverCommandCommand.png" />
   </ItemGroup>
@@ -111,6 +122,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
