--- a/src/Tooling/Tooling.csproj
+++ b/src/Tooling/Tooling.csproj
@@ -5,6 +5,9 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <TargetFrameworkProfile />
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -46,7 +49,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Features\ProjectMover\Mapping\ProjectPathMapper.cs" />
+    <Compile Include="Features\ProjectMover\MoverToolContext.cs" />
+    <Compile Include="Features\ProjectMover\Utility\AbsolutePathReferenceMap.cs" />
+    <Compile Include="Features\ProjectMover\Mapping\PathMapper.cs" />
     <Compile Include="Features\ProjectMover\MoverTool.cs" />
     <Compile Include="Features\ProjectMover\Processors\ProjectFileProcessor.cs" />
     <Compile Include="Features\ProjectMover\Processors\ProjectReference.cs" />
@@ -122,6 +127,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Features\ProjectMover\Resources\OpenProjectMoverCommandCommand.png" />
+    <Content Include="License.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Features\ProjectMover\Views\ProjectMoverControl.xaml">
