Cleansing of old tests

--- a/tests/Tooling.UnitTests/Tooling.UnitTests.csproj
+++ b/tests/Tooling.UnitTests/Tooling.UnitTests.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Tooling\Tooling.csproj" />
+  </ItemGroup>
+
 </Project>
