Refactoring + project rename feature

--- a/src/Tooling/Tooling.csproj
+++ b/src/Tooling/Tooling.csproj
@@ -53,10 +53,19 @@
     <Compile Include="Features\ProjectMover\MoverTool.cs" />
     <Compile Include="Features\ProjectMover\Utility\AbsolutePathReferenceMap.cs" />
     <Compile Include="Features\ProjectMover\Mapping\PathMapper.cs" />
-    <Compile Include="Features\ProjectMover\Processors\ProjectFileProcessor.cs" />
-    <Compile Include="Features\ProjectMover\Processors\ProjectReference.cs" />
-    <Compile Include="Features\ProjectMover\Processors\SolutionFileProcessor.cs" />
-    <Compile Include="Features\ProjectMover\Processors\SolutionReference.cs" />
+    <Compile Include="Features\ProjectRenamer\Commands\RenameProjectCommand.cs" />
+    <Compile Include="Features\ProjectRenamer\ViewModels\ProjectRenameDialogViewModel.cs" />
+    <Compile Include="Features\ProjectRenamer\Views\ProjectRenameDialogWindow.xaml.cs">
+      <DependentUpon>ProjectRenameDialogWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Annotations1.cs" />
+    <Compile Include="Shared\AttributedValue.cs" />
+    <Compile Include="Shared\Controls\BottomCommandLayout.cs" />
+    <Compile Include="Shared\Helpers\ToolWindowHelper.cs" />
+    <Compile Include="Shared\Parsers\ProjectReferenceParser.cs" />
+    <Compile Include="Shared\Parsers\ProjectReference.cs" />
+    <Compile Include="Shared\Parsers\SolutionReferenceParser.cs" />
+    <Compile Include="Shared\Parsers\SolutionReference.cs" />
     <Compile Include="Features\ProjectMover\Utility\HistoryInformation.cs" />
     <Compile Include="Features\ProjectMover\Utility\MigrationInformation.cs" />
     <Compile Include="Features\ProjectMover\Utility\MoverToolContext.cs" />
@@ -80,10 +89,10 @@
     </Compile>
     <Compile Include="Utility\EventDelegator.cs" />
     <Compile Include="Utility\IFileSystem.cs" />
-    <Compile Include="Utility\LoggerHelper.cs" />
-    <Compile Include="Utility\PackageHelper.cs" />
+    <Compile Include="Shared\Helpers\LoggerHelper.cs" />
+    <Compile Include="Shared\Helpers\PackageHelper.cs" />
     <Compile Include="Utility\RelayCommand.cs" />
-    <Compile Include="Utility\SolutionHelper.cs" />
+    <Compile Include="Shared\Helpers\SolutionHelper.cs" />
     <Compile Include="Features\ProjectMover\Views\ProjectMoverToolWindow.cs" />
     <Compile Include="Features\ProjectMover\Commands\ProjectMoverCommand.cs" />
     <Compile Include="Features\ProjectMover\Views\ProjectMoverControl.xaml.cs">
@@ -102,11 +111,13 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Features\ProjectMover\Resources\OpenProjectMoverCommandCommand.png" />
+    <Content Include="Features\ProjectRenamer\Resources\RenameProjectCommand.png" />
     <Content Include="License.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
@@ -139,6 +151,14 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Features\ProjectMover\Views\ProjectMoverControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Features\ProjectRenamer\Views\ProjectRenameDialogWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Shared\Controls\Theme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
