--- a/tests/Tooling.UnitTests/TestContent/ProjectRenameTests/SimilarRename/Company.Desktop.Framework.Mvvm.Abstraction.csproj
+++ b/tests/Tooling.UnitTests/TestContent/ProjectRenameTests/SimilarRename/Company.Desktop.Framework.Mvvm.Abstraction.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Company.Desktop.Framework\Company.Desktop.Framework.csproj" />
+		<ProjectReference Include="..\Framework\Framework.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
