--- a/tests/Tooling.UnitTests/TestContent/ProjectRenameTests/SimilarRename/Company.Desktop.Framework.Mvvm.csproj
+++ b/tests/Tooling.UnitTests/TestContent/ProjectRenameTests/SimilarRename/Company.Desktop.Framework.Mvvm.csproj
@@ -16,7 +16,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Company.Desktop.Framework.Mvvm.Abstraction\Company.Desktop.Framework.Mvvm.Abstraction.csproj" />
-	  <ProjectReference Include="..\Company.Desktop.Framework\Company.Desktop.Framework.csproj" />
+	  <ProjectReference Include="..\Framework\Framework.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
