--- a/tests/Tooling.UnitTests/TestContent/ProjectRenameTests/SimilarRename/Company.Desktop.Models.Abstraction.csproj
+++ b/tests/Tooling.UnitTests/TestContent/ProjectRenameTests/SimilarRename/Company.Desktop.Models.Abstraction.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Company.Desktop.Framework\Company.Desktop.Framework.csproj" />
+    <ProjectReference Include="..\Framework\Framework.csproj" />
   </ItemGroup>
 
 </Project>
