--- a/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Mvvm/Company.Desktop.Framework.Mvvm.csproj
@@ -6,8 +6,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Abstraction\**" />
+	  <EmbeddedResource Remove="Abstraction\**" />
+	  <None Remove="Abstraction\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<!-- <PackageReference Include="Amusoft.UI.WPF" Version="0.2.0-alpha57" /> -->
-		<PackageReference Include="Amusoft.UI.WPF" Version="0.5.0-alpha00155" />
+		<PackageReference Include="Amusoft.UI.WPF" Version="0.5.0.159" />
 		<PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.1" />
@@ -23,10 +29,6 @@
 	  <Reference Include="PresentationCore" />
 	  <Reference Include="PresentationFramework" />
 	  <Reference Include="System.Xaml" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Abstraction\" />
 	</ItemGroup>
 
 </Project>
