--- a/templateSources/WpfApplication/Company.Desktop.Application/Company.Desktop.Application.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Application/Company.Desktop.Application.csproj
@@ -46,6 +46,8 @@
 		<ProjectReference Include="..\Company.Desktop.Framework.Controls\Company.Desktop.Framework.Controls.csproj" />
 		<ProjectReference Include="..\Company.Desktop.Framework.Mvvm\Company.Desktop.Framework.Mvvm.csproj" />
 		<ProjectReference Include="..\Company.Desktop.Framework\Company.Desktop.Framework.csproj" />
+		<ProjectReference Include="..\Company.Desktop.Model.Entities\Company.Desktop.Model.Entities.csproj" />
+		<ProjectReference Include="..\Company.Desktop.Model.Providers\Company.Desktop.Model.Providers.csproj" />
 		<ProjectReference Include="..\Company.Desktop.Shared\Company.Desktop.Shared.csproj" />
 		<ProjectReference Include="..\Company.Desktop.ViewModels\Company.Desktop.ViewModels.csproj" />
 	</ItemGroup>
