--- a/templateSources/WpfApplication/Company.Desktop.Application/Company.Desktop.Application.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Application/Company.Desktop.Application.csproj
@@ -34,11 +34,12 @@
 	<ItemGroup>
 		<!-- <PackageReference Include="Amusoft.UI.WPF" Version="0.2.0-alpha57" /> -->
 		<PackageReference Include="Amusoft.UI.WPF" Version="0.5.0.159" />
+		<PackageReference Include="AutoMapper" Version="9.0.0" />
 		<PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
 		<PackageReference Include="MahApps.Metro" Version="1.6.5" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.1" />
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
+		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="NLog" Version="4.5.11" />
 	</ItemGroup>
 
