--- a/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Framework/Company.Desktop.Framework.csproj
@@ -7,12 +7,12 @@
 
   <ItemGroup>
 	  <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
+	  <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.3" />
 	  <PackageReference Include="NLog" Version="4.5.11" />
-	  <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
-	  <PackageReference Include="System.Composition" Version="1.2.0" />
-	  <PackageReference Include="System.Reactive" Version="4.1.2" />
+	  <PackageReference Include="System.ComponentModel.Composition" Version="4.7.0" />
+	  <PackageReference Include="System.Composition" Version="1.4.0" />
+	  <PackageReference Include="System.Reactive" Version="4.3.2" />
   </ItemGroup>
 
 </Project>
