--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,4 +1,4 @@
-name: Template sources build integrity
+name: Templates integrity
 on: [push]
 
 jobs:
@@ -12,5 +12,5 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+    - name: dotnet build template sources
+      run: dotnet build templateSources/**/*.sln --configuration Release
