--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,6 +1,11 @@
 name: Templates integrity
-on: [push]
-
+on: 
+  [push]:
+    paths: 
+      - src/*
+      - tests/*
+      - templateSources/*
+      - .github/workflows/*
 jobs:
   build:
 
