--- a/templateSources/WpfApplication/Company.Desktop.Application/Company.Desktop.Application.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.Application/Company.Desktop.Application.csproj
@@ -40,7 +40,8 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-		<PackageReference Include="NLog" Version="4.5.11" />
+		<PackageReference Include="NLog" Version="4.6.7" />
+		<PackageReference Include="NLog.Extensions.Logging" Version="1.6.1" />
 	</ItemGroup>
 
 	<ItemGroup>
