--- a/templateSources/WpfApplication/Company.Desktop.ViewModels/Company.Desktop.ViewModels.csproj
+++ b/templateSources/WpfApplication/Company.Desktop.ViewModels/Company.Desktop.ViewModels.csproj
@@ -7,7 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
-    <PackageReference Include="NLog" Version="4.5.11" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
+    <PackageReference Include="NLog" Version="4.6.7" />
   </ItemGroup>
 
   <ItemGroup>
